# sdl2_mt

./: Cargo.toml
examples/: basic.rs  custom_create_window.rs
src/: lib.rs
tests/: double_exit.rs  double_window.rs  open_window.rs
